--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.open {
   display: flex;
+}
+
+.close {
+  display: none;
+}
+.disableScroll {
+  overflow: hidden;
+}
+
+.box {
+  display: flex;
+  align-items: center;
   flex-direction: column;
+}
+
+.box-error {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.box-navbar {
+  width: 100vw;
+  display: inline-flex;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  list-style-type: none;
+  margin: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
