--- a/src/components/simpleLoading/simpleLoading.css
+++ b/src/components/simpleLoading/simpleLoading.css
@@ -1,13 +1,13 @@
 .loading {
   /* display: none; */
-  z-index: 2;
+  /* z-index: 2; */
   justify-content: center;
   position: absolute;
-  height: 100vh;
-  width: 100vw;
-  background-color: black;
-  color: white;
-  opacity: 0.99;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  color: black;
+  /* opacity: 0.7; */
 }
 
 .animation {
@@ -23,25 +23,25 @@
 #loading {
   margin: 2px;
   font-size: large;
-  animation: fade 1s linear 0s infinite alternate;
+  animation: fade 0.4s linear 0s infinite alternate;
 }
 
 #dot-1 {
   margin: 2px;
   font-size: x-large;
-  animation: jump 0.5s linear 0s infinite alternate;
+  animation: jump 0.3s linear 0s infinite alternate;
 }
 
 #dot-2 {
   margin: 2px;
   font-size: x-large;
-  animation: jump 0.5s linear 0.5s infinite alternate;
+  animation: jump 0.3s linear 0.2s infinite alternate;
 }
 
 #dot-3 {
   margin: 2px;
   font-size: x-large;
-  animation: jump 0.5s linear 0.7s infinite alternate;
+  animation: jump 0.3s linear 0.35s infinite alternate;
 }
 
 @keyframes fade {
@@ -50,9 +50,11 @@
   }
   50% {
     opacity: 1;
+    top: 1px;
   }
   100% {
     opacity: 0.4;
+    top: 2px;
   }
 }
 
