--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,8 +1,25 @@
 .box-navbar {
   display: inline-flex;
+  position: sticky;
+  top: 0;
   justify-content: center;
   width: 100%;
+  height: 5rem;
+  align-self: center;
+  align-items: center;
+  background-color: rgb(0, 70, 150);
+  margin-bottom: 2rem;
+}
+.navbar {
+  display: grid;
+  width: 75%;
+  grid-template-columns: repeat(10, 10%);
+  border: 1px solid rgba(255, 255, 255);
 }
 .title-navbar {
   padding: 1rem;
+  color: rgb(255, 255, 255);
+}
+.title {
+  color: white;
 }
